crates/strider-analyze/tests/snapshots/v3__mips32be__calls__repeat_call_pair.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x40086c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x40086c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v8" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\na0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "6" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v12" [color="#888888", style=dashed];
  "v12" -> "10" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v13" [color="#888888", style=dashed];
  "v13" -> "10" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v12" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "16" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
